correctif z-index loader

--- a/sass/loader.scss
+++ b/sass/loader.scss
@@ -17,6 +17,7 @@
     }
     100% {
         opacity: 0;
+        z-index: -10;
         
     }
 }
@@ -29,7 +30,7 @@
     100% {
         
         opacity: 0;
-        
+        z-index: -10;
     }
 }
 
@@ -57,7 +58,7 @@
     100% {
         -webkit-transform: rotate(360deg);
         opacity: 0;
-       
+        z-index: -10;
     }
 }
 
@@ -69,6 +70,6 @@
     100% {
         -webkit-transform: rotate(360deg);
         opacity: 0;
-        
+        z-index: -10;
     }
 }
